// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductProperties /> should not render if no properties where passed 1`] = `
<Connect(ProductProperties)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductProperties
    dispatch={[Function]}
    properties={null}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <SurroundPortals
      portalName="product.properties"
      portalProps={
        Object {
          "properties": null,
        }
      }
    >
      <Portal
        name="product.properties.before"
        props={
          Object {
            "properties": null,
          }
        }
      />
      <Portal
        name="product.properties"
        props={
          Object {
            "properties": null,
          }
        }
      >
        <Content
          properties={null}
        />
      </Portal>
      <Portal
        name="product.properties.after"
        props={
          Object {
            "properties": null,
          }
        }
      />
    </SurroundPortals>
  </ProductProperties>
</Connect(ProductProperties)>
`;

exports[`<ProductProperties /> should render if properties are passed 1`] = `
<Connect(ProductProperties)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductProperties
    dispatch={[Function]}
    properties={
      Array [
        Object {
          "displayGroup": "test",
        },
      ]
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <SurroundPortals
      portalName="product.properties"
      portalProps={
        Object {
          "properties": Array [
            Object {
              "displayGroup": "test",
            },
          ],
        }
      }
    >
      <Portal
        name="product.properties.before"
        props={
          Object {
            "properties": Array [
              Object {
                "displayGroup": "test",
              },
            ],
          }
        }
      />
      <Portal
        name="product.properties"
        props={
          Object {
            "properties": Array [
              Object {
                "displayGroup": "test",
              },
            ],
          }
        }
      >
        <Content
          properties={
            Array [
              Object {
                "displayGroup": "test",
              },
            ]
          }
        >
          <Wrapper
            dense={false}
          >
            <div
              className="css-1x8awm9"
            >
              <table>
                <thead />
                <tbody>
                  <Rows
                    properties={
                      Array [
                        Object {
                          "displayGroup": "test",
                        },
                      ]
                    }
                  >
                    <Row
                      key="undefined-undefined"
                    >
                      <tr
                        key="undefinedundefined"
                      >
                        <td
                          className={
                            Object {
                              "data-css-fl9ufm": "",
                            }
                          }
                        >
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": undefined,
                              }
                            }
                          />
                        </td>
                        <td
                          className={
                            Object {
                              "data-css-fl9ufm": "",
                            }
                          }
                          data-test-id="property: undefined"
                        >
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": undefined,
                              }
                            }
                          />
                        </td>
                      </tr>
                    </Row>
                  </Rows>
                </tbody>
              </table>
            </div>
          </Wrapper>
        </Content>
      </Portal>
      <Portal
        name="product.properties.after"
        props={
          Object {
            "properties": Array [
              Object {
                "displayGroup": "test",
              },
            ],
          }
        }
      />
    </SurroundPortals>
  </ProductProperties>
</Connect(ProductProperties)>
`;
